platter-compiler-sveltejs/static/python/tests/syntax_programs/invalid_tests/test_script_88.platter
start(){
  menu(a){
    choice a:a:a:a:
  }
}